2005-03-17  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/map.c (exported_ap_free): We're using a free-list data
	structure and re-using malloc'ed objects.  So, to be safe, memset
	entire structure when it's freed, not just the pointer.
	(umount_exported): bug fix to on-exit code.  Don't run
	am_unmounted() unless unmount_mp() didn't run, since the latter
	already calls am_unmounted().  This way we avoid a double-free
	bug.

2005-03-15  Erez Zadok  <ezk@cs.sunysb.edu>

	* tasks: updates.  Executable maps is supported.  NFSv4 and
	FreeBSD autofs isn't.

	* Makefile.am (EXTRA_DIST): include FAQ in distro.

	* doc/Makefile.am (alldocs): install README.lda and README.osx.

	* FAQ: new file, better late than never.

2005-03-14  Erez Zadok  <ezk@cs.sunysb.edu>

	* scripts/amd2ldif.in: patch to add the amdMapName attribute to
	the amdMapTimestamp object when amd2ldif converts it.  This is
	necessary if you are using type:=auto mounts and want those
	mountmaps looked up through LDAP.  Patch from Jim Zajkowski
	<jim.zajkowski@gmail.com>.

2005-03-12  Erez Zadok  <ezk@cs.sunysb.edu>

	* minor new ports: i386-pc-linux-rhel4.

	* minor new ports: powerpc-apple-darwin7.8.0.

2005-03-10  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/ops_nfs.c (prime_nfs_fhandle_cache): rearrange code so it's
	cleaner.

	* ltmain.sh: upgrade from libtool-1.5.6.

	* m4/macros/check_{fs_mntent,mnttab_type,mount_type}.m4: check for
	Linux 2.6 kernel modules, which have a .ko extension, not .o.  Now
	we can properly detect which file systems exist on Linux 2.6 based
	systems (SLES9, RHEL4, Fedora, etc.).

2005-03-09  Erez Zadok  <ezk@cs.sunysb.edu>

	* m4/macros/host_macros.m4: find out what's the OS software
	distribution name, if any.

	* m4/macros/header_templates.m4: template for DISTRO_NAME.

	* amd/get_args.c (get_version_string): print again full_os, os,
	osver, and vendor (bug fix).
	(get_version_string): print distribution name, if known (e.g.,
	rh9, suse8, etc.).
