@@ -412,3 +412,7 @@ January 3, 2005: implementation of executable maps for Amd.
 
 * Jim Zajkowski <jim.zajkowski@gmail.com>
 March 14, 2005: small patch to amd2ldif.
+
+* Adam Morley <adam at gmi dot com>
+January 27, 2005: synchronize what amd2ldif does vs. what the ldap.schema
+expects.
