@@ -2,14 +2,17 @@ LDAP support for am-utils was originally done by Leif Johansson
 <leifj@it.su.se>.  He no longer maintains it.
 
 The current LDAP support for am-utils is for LDAPv2 only.  Reportedly,
-small changes are needed to support LDAPv3.  Volunteers and patches are
-welcome.
+LDAPv3 mostly works.  Volunteers and patches are welcome.
 
 The IANA has assigned the following Private Enterprise Number to:
 
 	10180  Am-utils Organization   Erez Zadok	ezk@am-utils.org
 
-There are two files in this directory that relate to LDAP:
+There are three files in this directory that relate to LDAP:
+
+ldap.schema:
+
+	This is the most current schema.
 
 ldap-id.txt:
 
